--- a/integrals.ipynb
+++ b/integrals.ipynb
@@ -259,6 +259,7 @@
    "outputs": [],
    "source": [
     "import mpmath as mp\n",
+    "mp.mp.dps = precision\n",
     "\n",
     "def n_average_collisions_numerical(α, X, u, i):    \n",
     "    def term(k):\n",
