--- a/integrals.ipynb
+++ b/integrals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,31 +40,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Variable                         Type        Data/Info\n",
-      "------------------------------------------------------\n",
-      "A                                Integer     12\n",
-      "N                                function    <function N at 0x7f89251ca400>\n",
-      "R                                function    <function R at 0x7f89251ca620>\n",
-      "X                                Float       0.33410816932633238398308<...>2720037860996712218164558\n",
-      "expr                             Sum         Sum(Piecewise((1 + (-1 + <...> 1)/α, True)), (k, 0, i))\n",
-      "f                                function    <function f at 0x7f89223d0598>\n",
-      "i                                int         43\n",
-      "mp                               module      <module 'mpmath' from '/h<...>ages/mpmath/__init__.py'>\n",
-      "n_average_collisions             function    <function n_average_collisions at 0x7f892243bb70>\n",
-      "n_average_collisions_numerical   function    <function n_average_colli<...>erical at 0x7f89251ca598>\n",
-      "precision                        int         50\n",
-      "sp                               module      <module 'sympy' from '/ho<...>kages/sympy/__init__.py'>\n",
-      "symbols                          tuple       n=4\n",
-      "u                                Float       14.5086577385242\n",
-      "α                                Float       0.71597633136094674556213<...>7751479289940828402366864\n",
-      "ξ                                Float       0.15776898982320378204263<...>2101571225404121283376843\n"
+      "Variable    Type       Data/Info\n",
+      "--------------------------------\n",
+      "A           Integer    12\n",
+      "X           Float      0.33410816932633238398308<...>2720037860996712218164558\n",
+      "i           int        43\n",
+      "mp          module     <module 'mpmath' from '/h<...>ages/mpmath/__init__.py'>\n",
+      "precision   int        50\n",
+      "sp          module     <module 'sympy' from '/ho<...>kages/sympy/__init__.py'>\n",
+      "u           Float      14.5086577385242\n",
+      "α           Float      0.71597633136094674556213<...>7751479289940828402366864\n",
+      "ξ           Float      0.15776898982320378204263<...>2101571225404121283376843\n"
      ]
     }
    ],
@@ -82,13 +75,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def n_average_collisions(α, X, u, i):    \n",
     "    k, m = sp.symbols(\"k, m\")\n",
-    "    R_summand = sp.Sum(\n",
+    "    R_k = sp.Sum(\n",
     "        # Summand\n",
     "        (-1)**m * sp.factorial(k)/sp.factorial(m) * α**m*(1-α)**(k-m+1) * (u-k*X)**m,\n",
     "        # Limits\n",
@@ -97,7 +90,7 @@
     "\n",
     "    R = sp.Piecewise(\n",
     "        # R(k>0):\n",
-    "        ((R_summand + (-1)**k*α**k*(u-k*X)**k) / (sp.factorial(k)*α**k*(1-α)**k), k > 0), \n",
+    "        ((R_k + (-1)**k*α**k*(u-k*X)**k) / (sp.factorial(k)*α**k*(1-α)**k), k > 0), \n",
     "        # R(k<=0):\n",
     "        (1, k <= 0)\n",
     "    )\n",
@@ -122,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +183,7 @@
        "                                                        "
       ]
      },
-     "execution_count": 85,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +218,7 @@
        "92.647226612382042830370553040943916969193047258979"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,16 +280,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "mpf('92.64722661238204283037055304094536816364614667887827596022549319642310952268529771740005055941517487691')"
+       "mpf('92.647226612382042830370553040941674860743773611584725')"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,13 +297,6 @@
    "source": [
     "n_average_collisions_numerical(α, X, u, 43)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -329,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
