Fix number of iterations and print approximation

--- a/mpfr-integrals.ipynb
+++ b/mpfr-integrals.ipynb
@@ -12,6 +12,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note - need to source `start` for this to work"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -161,8 +168,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "void n_average_collisions_numerical(mpfr_t result, const mpfr_t alpha, const mpfr_t x, const mpfr_t u, const unsigned int i, const mpfr_rnd_t rnd)\n",
+    "void n_average_collisions_numerical(mpfr_t result, const mpfr_t alpha, const mpfr_t x, const mpfr_t u, const mpfr_rnd_t rnd)\n",
     "{\n",
+    "    mpfr_t i_;\n",
+    "    mpfr_init(i_);\n",
+    "    mpfr_div(i_, u, x, rnd);\n",
+    "    mpfr_ceil(i_, i_);\n",
+    "    int i = mpfr_get_ui(i_, rnd);\n",
+    "    \n",
     "    mpfr_ptr* terms = new mpfr_ptr[i+1];\n",
     "    for (int k=0; k<i+1; k++){\n",
     "        // 1/alpha\n",
@@ -224,13 +237,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "92.6614\n",
       "92.6472\n"
      ]
     }
@@ -243,7 +257,7 @@
     "    mpfr_rnd_t rnd = MPFR_RNDN;\n",
     "\n",
     "    // Set default precision to 40*3 bits ~ 40dps\n",
-    "    mpfr_set_default_prec ((int)(40*3.33));\n",
+    "    mpfr_set_default_prec ((int)(40*3));\n",
     "\n",
     "    mpfr_t result, alpha, x, u;\n",
     "    mpfr_inits(result, alpha, x, u, NULL);\n",
@@ -257,13 +271,35 @@
     "    mpfr_ui_div(x, 1, alpha, rnd);\n",
     "    mpfr_log(x, x, rnd);\n",
     "\n",
-    "    // u = log(2E6/1)\n",
-    "    mpfr_t k;\n",
+    "    // alpha_div_one_sub_alpha = (α/(1-α))\n",
+    "    mpfr_t alpha_div_one_sub_alpha;\n",
+    "    mpfr_init(alpha_div_one_sub_alpha);\n",
+    "    mpfr_ui_sub(alpha_div_one_sub_alpha, 1, alpha, rnd);\n",
+    "    mpfr_div(alpha_div_one_sub_alpha, alpha, alpha_div_one_sub_alpha, rnd);\n",
+    "    \n",
+    "    // xi = 1 + (α/(1-α))*sp.log(α)\n",
+    "    mpfr_t k, E0, E, xi;\n",
+    "    mpfr_init(xi);\n",
+    "    mpfr_log(xi, alpha, rnd);\n",
+    "    mpfr_mul(xi, xi, alpha_div_one_sub_alpha, rnd);\n",
+    "    mpfr_add_ui(xi, xi, 1, rnd);\n",
+    "    \n",
+    "    // u = log(E0/E)\n",
+    "    mpfr_init_set_ui(E0, 2E6, rnd); // 2 MeV\n",
+    "    mpfr_init_set_ui(E, 1, rnd); // 1 eV\n",
     "    mpfr_init(k);\n",
-    "    mpfr_set_ui(k, 2000000, rnd);\n",
+    "    mpfr_div(k, E0, E, rnd);\n",
     "    mpfr_log(u, k, rnd);\n",
     "    \n",
-    "    n_average_collisions_numerical(result, alpha, x, u, 43, rnd);\n",
+    "    // approx = 0.7 + ξ**-1 * u\n",
+    "    mpfr_t approx;\n",
+    "    mpfr_init(approx);\n",
+    "    mpfr_div(approx, u, xi, rnd);\n",
+    "    mpfr_add_d(approx, approx, 0.7, rnd);\n",
+    "    \n",
+    "    std::cout << mpfr_get_d(approx, rnd) << std::endl;\n",
+    "    \n",
+    "    n_average_collisions_numerical(result, alpha, x, u, rnd);\n",
     "    std::cout << mpfr_get_d(result, rnd) << std::endl;\n",
     "}"
    ]
